# googly-eyes

./: .gitignore  README.md  docker-compose.yml
model_dev/: 01_data_cleaning.ipynb  02_data_sampling.ipynb  03_finetuning.ipynb  04_inferencing.ipynb  05_postprocessing.ipynb
service/: Dockerfile  main.py  model.py  pyproject.toml
web/: Dockerfile  app.py  pyproject.toml
