[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"
fastapi = "^0.110.0"
numpy = "^1.26.4"
torch = "^2.2.1"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
torchvision = "^0.17.1"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
